<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="user" type="com.example.vitalykulyk.simplequiz.User"/>
    </data>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vitalykulyk.simplequiz.MainActivity"
    android:background="@color/colorBackground">




    <LinearLayout
        android:id="@+id/mainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">

        <TextView
            android:id="@+id/nameOfView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_view"
            android:fontFamily="sans-serif medium"
            android:textSize="36sp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/madeBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/made_by"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif light"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/mainText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangles"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/points"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/colorDividingTable"/>


            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/colorDividingTable"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time"
                android:gravity="center"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/statistics"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/image"
            android:layout_marginTop="16dp"
            android:layout_below="@id/statistics"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sea_test"
                android:scaleType="centerCrop"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/questionAndAnswers"
            android:layout_below="@id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:text="@string/test_question"
                android:gravity="center"
                android:layout_weight="1"
                android:background="@drawable/rectangles"
                android:textColor="@color/textColor"
                android:layout_marginTop="16dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/testA"
                        android:background="@drawable/rectangles"
                        />

                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/testB"
                        android:background="@drawable/rectangles"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/testC"
                        android:background="@drawable/rectangles"
                        />

                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/testD"
                        android:background="@drawable/rectangles"/>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>





</RelativeLayout>
</layout>